# neat-headers

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  ecs.hpp  neat_allocators.hpp  neat_ecs.hpp  neat_math.hpp  neat_test.hpp  neat_types.hpp
docs/: allocators.md  ecs.md  lua.md  math.md  neat_allocators.md  neat_ecs.md  neat_types.md  test.md  types.md
example/: CMakeLists.txt  allocators_binary_tree.cpp  ecs_transform.cpp  example.cpp
include/neat/: lua.hpp  math.hpp  test.hpp
tests/: CMakeLists.txt  allocators.cpp  ecs.cpp  lua.cpp  math.cpp  test.cpp  tests_allocators.cpp  tests_ecs.cpp  tests_math.cpp  tests_test.cpp  tests_types.cpp  types.cpp
